Hurr durr. Fixes: Drawing.

--- a/res/layout/layout_ingame.xml
+++ b/res/layout/layout_ingame.xml
@@ -69,7 +69,9 @@
     <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/toggleDebug" android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true" android:textOff="Debug mode OFF"
-            android:textOn="Debug mode ON" android:onClick="setDEBUG"/>
+            android:id="@+id/toggleDebug"
+            android:textOff="Debug mode OFF"
+            android:textOn="Debug mode ON" android:onClick="setDEBUG"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"/>
 </RelativeLayout>
