Players can be moved using keys. Partially fixed wall hit detection. Bug: when player moves into obstacle precisely at it's corner, detection breaks permanently

--- a/res/layout/layout_ingame.xml
+++ b/res/layout/layout_ingame.xml
@@ -22,26 +22,26 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="R"
+            android:text="L"
             android:id="@+id/button_left"
             android:minHeight="40dp"
             android:minWidth="40dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:enabled="true"
-            android:onClick="onButtonPressed()"/>
+            android:onClick="moveLeft"/>
 
     <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="L"
+            android:text="R"
             android:id="@+id/button_right"
             android:minHeight="40dp"
             android:minWidth="40dp"
             android:layout_alignTop="@+id/button_down"
             android:layout_toRightOf="@+id/button_down"
-            android:enabled="true"/>
+            android:enabled="true" android:onClick="moveRight"/>
 
     <Button
             style="?android:attr/buttonStyleSmall"
@@ -53,7 +53,7 @@
             android:minHeight="40dp"
             android:layout_above="@+id/button_right"
             android:layout_toLeftOf="@+id/button_right"
-            android:enabled="true"/>
+            android:enabled="true" android:onClick="moveUp"/>
 
     <Button
             style="?android:attr/buttonStyleSmall"
@@ -65,11 +65,33 @@
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/button_left"
             android:minHeight="40dp"
-            android:enabled="true"/>
+            android:enabled="true" android:onClick="moveDown"/>
     <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleDebug" android:layout_alignParentTop="true"
             android:layout_alignParentRight="true" android:textOff="Debug mode OFF"
             android:textOn="Debug mode ON" android:onClick="setDEBUG"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next player"
+            android:id="@+id/next"
+            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
+            android:onClick="nextPlayer"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prev player"
+            android:id="@+id/prev"
+            android:layout_alignParentBottom="true" android:layout_toLeftOf="@+id/next"
+            android:onClick="prevPlayer"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="0"
+            android:id="@+id/currentPlayer"
+            android:layout_above="@+id/next" android:layout_alignParentRight="true"
+            />
 </RelativeLayout>
