New: timestamp synchronization Done via ping calculation

--- a/res/layout/layout_ingame.xml
+++ b/res/layout/layout_ingame.xml
@@ -117,4 +117,10 @@
             android:id="@+id/toggleSignIn" android:layout_below="@+id/spawn_pickup" android:layout_alignParentRight="true"
             android:layout_alignLeft="@+id/spawn_pickup" android:textOff="Signed out" android:textOn="Signed in"
             android:onClick="toggleSignIn"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/timestamp" android:layout_above="@+id/currentPlayer"
+            android:layout_alignRight="@+id/currentPlayer"/>
 </RelativeLayout>
