Various fixes Joystick, crashes, etc. Removed redundant UI elements

--- a/res/layout/layout_ingame.xml
+++ b/res/layout/layout_ingame.xml
@@ -18,58 +18,6 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"/>
 
-    <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="L"
-            android:id="@+id/button_left"
-            android:minHeight="64dp"
-            android:minWidth="64dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:enabled="true"
-            android:onClick="movePlayerL"/>
-
-    <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="R"
-            android:id="@+id/button_right"
-            android:minHeight="64dp"
-            android:minWidth="64dp"
-            android:layout_alignTop="@+id/button_down"
-            android:layout_toRightOf="@+id/button_down"
-            android:enabled="true"
-            android:onClick="movePlayerR"/>
-
-    <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="U"
-            android:id="@+id/button_up"
-            android:minWidth="64dp"
-            android:minHeight="64dp"
-            android:layout_above="@+id/button_right"
-            android:layout_toLeftOf="@+id/button_right"
-            android:enabled="true"
-            android:onClick="movePlayerU"/>
-
-    <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="D"
-            android:id="@+id/button_down"
-            android:minWidth="64dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/button_left"
-            android:minHeight="64dp"
-            android:enabled="true"
-            android:onClick="movePlayerD"/>
-            
     <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -77,21 +25,13 @@
             android:layout_alignParentRight="true" android:textOff="Debug mode OFF"
             android:textOn="Debug mode ON" android:onClick="setDEBUG"/>
 
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Spawn a pickup"
-            android:id="@+id/spawn_pickup"
-            android:layout_below="@+id/toggleDebug"
-            android:layout_alignParentRight="true"
-            android:layout_alignLeft="@+id/toggleDebug"
-            android:onClick="spawnPickup"/>
     <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/toggleSignIn" android:layout_below="@+id/spawn_pickup" android:layout_alignParentRight="true"
-            android:layout_alignLeft="@+id/spawn_pickup" android:textOff="Signed out" android:textOn="Signed in"
-            android:onClick="toggleSignIn"/>
+            android:id="@+id/toggleSignIn" android:layout_alignParentRight="true"
+            android:textOff="Signed out" android:textOn="Signed in"
+            android:onClick="toggleSignIn" android:layout_below="@+id/toggleDebug"
+            android:layout_alignLeft="@+id/toggleDebug"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
